--- a/ShopmeWebParent/ShopmeBackend/pom.xml
+++ b/ShopmeWebParent/ShopmeBackend/pom.xml
@@ -15,6 +15,11 @@
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test-autoconfigure</artifactId>
+            <version>2.4.1</version>
+        </dependency>
     </dependencies>
 
     <build>
