--- a/ShopmeWebParent/ShopmeFrontend/pom.xml
+++ b/ShopmeWebParent/ShopmeFrontend/pom.xml
@@ -9,11 +9,16 @@
     </parent>
     <artifactId>ShopmeFrontend</artifactId>
     <name>ShopmeFrontend</name>
-    <description>ShopmeFrontend</description>
+    <description>Shopme web Application</description>
     <properties>
         <java.version>17</java.version>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-mail -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
     </dependencies>
 
