code customer login by google account

--- a/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeFrontend/src/main/resources/application.properties
@@ -9,3 +9,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+spring.security.oauth2.client.registration.google.client-id=232875399227-lha7ujpc1uco5m012vs8a45gf1ehl1rr.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope =profile,email
+spring.main.allow-circular-references=true
